# casbin-rs-anrangors-adapter

./: Cargo.toml  README.md  docker-compose.yaml
src/: casbin_dao.rs  lib.rs  lib_test.rs  model.rs
