[package]
name = "casbin-arangors-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.5.3"
async-trait = "0.1.64"
casbin = "2.0.9"
tokio = { version = "1.24.2", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"