[package]
authors = ["Luca Coduri <coduri.vitor@gmail.com>"]
name = "casbin-arangors-adapter"
description = "ArangoRs adapter for casbin-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/LucaCoduriV/casbin-rs-anrangors-adapter"
license = "Apache-2.0"


[dependencies]
arangors = "0.5.3"
async-trait = "0.1.64"
casbin = "2.0.9"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"